выполнен п.1 (половина) плана